# metajudge

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  rigor.yml
docs/: CITATION-GROUNDING.md  DECISIONS.md  PROVENANCE.md  REFERENCES.md  interop-epic.md  roadmap.md  sim-operating-characteristics.md
docs/decisions/: 2026-06-22-e07-corpus-lock-summeval.md  2026-06-22-e07-dif-ordinal-logistic-regression.md  2026-06-23-e07-dif-cluster-bootstrap.md  2026-06-23-e07-eval-instruments-interop.md  2026-06-23-e07-icc-incomplete-data-refuse.md  2026-07-01-e07-dif-nested-strata-confound.md  2026-07-01-e07-report-card-inference-caveat.md  2026-07-02-e07-overlap-threshold-calibration.md  2026-07-03-ci-slow-suite-performance.md  2026-07-04-e07-ellipse-human-rater-dif.md  2026-07-04-e07-summeval-consistency-dif.md  2026-07-05-e07-ordinal-dif-band-derivation.md
docs/reviews/: 2026-07-02-multi-persona-review.md
examples/: _ellipse_judge.py  ablation_knob_attribution.py  audit_catches_bias.py  audit_conditioner_choice.py  audit_ellipse.py  audit_ellipse_llm.py  audit_llm_judge.py  audit_llm_judge_demo.ipynb  audit_summeval.py  audit_summeval_consistency.py  llm_judge_scores.csv  sample_output.txt  sample_output_ellipse.txt  sample_output_ellipse_llm.txt  sample_output_llm.txt  sample_output_summeval_consistency.txt  summaries_sample.jsonl
examples/data/: ablation_reasoning_only.csv  ablation_trait_scoped_anchors_only.csv  ellipse_llm_pilot_qwen2.5-7b.csv  summeval_dims.csv
scripts/: check_no_scaffolding.sh  derive_ordinal_bands.py  prep_demo.py  run_oc_study.py
scripts/oracles/: README.md  fit_polr_dif.R  gen_dgp_recovery.py  gen_olr_oracle.py
sim/: __init__.py  dgp.py  harness.py  oc_study.py  validation.py
sim/fixtures/: brant_po_holds.csv  brant_po_violated.csv
sim/oracles/: brant_reference.R  dgp_recovery.R  make_brant_fixture.py
sim/results/: band_derivation_points.csv  band_derivation_summary.csv  s1_baseline.csv  s2_cluster_stress_analytic.csv  s2_cluster_stress_bootstrap.csv  s3_overlap_external_degraded.csv  s3_overlap_rest.csv  s4_po_robustness.csv  s5_sample_size.csv  s5_unbalanced.csv
src/metajudge/: __init__.py  _constants.py  data.py  demo.py  diagnostics.py  dif.py  reliability.py  report.py
src/metajudge/data/: SOURCE.md  demo.csv
tests/: conftest.py  test_ablation_knob_attribution.py  test_alpha.py  test_audit_ellipse_llm_cli.py  test_band_provenance.py  test_brant.py  test_brant_provenance.py  test_catches_bias.py  test_conditioner_choice.py  test_data.py  test_demo.py  test_diagnostics.py  test_dif.py  test_ellipse_judge_scorer.py  test_ellipse_llm_pilot.py  test_examples.py  test_icc.py  test_interop.py  test_oc_study.py  test_oracle_provenance.py  test_public_api.py  test_report.py  test_sim_dgp.py  test_sim_harness.py  test_sim_recovery.py  test_sim_validation.py  test_smoke.py
