[project]
name = "metajudge"
version = "0.1.0"
description = "Audit an LLM judge/rubric instrument: reliability + DIF report card."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Brittany Reese" }]
keywords = ["llm-judge", "psychometrics", "reliability", "dif", "evaluation"]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "krippendorff>=0.6",
]

[project.urls]
Homepage = "https://github.com/recuriax/metajudge"
Repository = "https://github.com/recuriax/metajudge"
Issues = "https://github.com/recuriax/metajudge/issues"
Changelog = "https://github.com/recuriax/metajudge/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metajudge"]

[tool.hatch.build.targets.wheel.force-include]
"src/metajudge/data/demo.csv" = "metajudge/data/demo.csv"
"src/metajudge/data/SOURCE.md" = "metajudge/data/SOURCE.md"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.pytest.ini_options]
addopts = "-q --cov=metajudge --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

# Local development tooling. PEP 735 dependency groups are not published to PyPI
# and are installed by default by `uv run` and `uv sync`, so `uv run pytest`
# works with no extra flags in any fresh checkout or worktree.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "pingouin>=0.5",
    "statsmodels>=0.14",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
    "pandas-stubs>=3.0.3.260530",
]
