[project]
name = "metajudge"
version = "0.1.0"
description = "Audit an LLM judge/rubric instrument: reliability + DIF report card."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Brittany Reese Markides", email = "12763491+breesemarkides@users.noreply.github.com" },
]
keywords = ["llm-judge", "psychometrics", "reliability", "dif", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "krippendorff>=0.6",
]

[project.urls]
Homepage = "https://github.com/breesemarkides/metajudge"
Repository = "https://github.com/breesemarkides/metajudge"
Issues = "https://github.com/breesemarkides/metajudge/issues"
Changelog = "https://github.com/breesemarkides/metajudge/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metajudge"]

[tool.hatch.build.targets.wheel.force-include]
"src/metajudge/data/demo.csv" = "metajudge/data/demo.csv"
"src/metajudge/data/SOURCE.md" = "metajudge/data/SOURCE.md"

[tool.ruff]
line-length = 100
src = ["src", "tests", "sim"]
exclude = ["*.R"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests", "sim"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.pytest.ini_options]
addopts = "-q --cov=metajudge --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
pythonpath = ["."]

# Local development tooling. PEP 735 dependency groups are not published to PyPI
# and are installed by default by `uv run` and `uv sync`, so `uv run pytest`
# works with no extra flags in any fresh checkout or worktree.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "pingouin>=0.5",
    "statsmodels>=0.14",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
    "pandas-stubs>=3.0.3.260530",
]
