[project]
name = "metajudge"
version = "0.2.1"
description = "Audit an LLM judge/rubric instrument: reliability + DIF report card."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Brittany Reese Markides", email = "12763491+brittanyreese@users.noreply.github.com" },
]
keywords = ["llm-judge", "psychometrics", "reliability", "dif", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "krippendorff>=0.6",
]

[project.urls]
Homepage = "https://github.com/brittanyreese/metajudge"
Repository = "https://github.com/brittanyreese/metajudge"
Issues = "https://github.com/brittanyreese/metajudge/issues"
Changelog = "https://github.com/brittanyreese/metajudge/blob/main/CHANGELOG.md"

[project.optional-dependencies]
examples = [
    "google-genai>=2.10.0",
    "openai>=1.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Allowlist: ship only intended sources. Without this, hatchling sweeps private
# working directories into the tarball.
# Tests import from sim/ and scripts/, so both are required for a reproducible
# `pytest` from an unpacked sdist. examples/ (live-LLM scripts, a 54K notebook,
# sample CSV/JSONL) is repo-only illustration, not shipped: the installable demo
# is metajudge.load_demo + the wheel's force-included data/demo.csv.
only-include = [
    "src",
    "tests",
    "sim",
    "scripts",
    ".env.example",
    "docs/decisions",
    "docs/roadmap.md",
    "docs/PROVENANCE.md",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "AGENTS.md",
    "SPEC.md",
    "LICENSE",
    "pyproject.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metajudge"]

[tool.hatch.build.targets.wheel.force-include]
"src/metajudge/data/demo.csv" = "metajudge/data/demo.csv"
"src/metajudge/data/SOURCE.md" = "metajudge/data/SOURCE.md"

[tool.ruff]
line-length = 100
src = ["src", "tests", "sim"]
exclude = ["*.R"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests", "sim", "scripts"]
# "examples" is intentionally not in `include` (not strict-checked as first-party source),
# but tests/test_ellipse_judge_scorer.py imports examples/_ellipse_judge.py the same way
# examples/audit_ellipse_llm.py does at runtime (script dir on sys.path), so it needs to be
# resolvable here too.
extraPaths = ["examples"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.pytest.ini_options]
addopts = "-q --cov=metajudge --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: mark a test as slow; skipped by default, run with --run-slow"]

# Local development tooling. PEP 735 dependency groups are not published to PyPI
# and are installed by default by `uv run` and `uv sync`, so `uv run pytest`
# works with no extra flags in any fresh checkout or worktree.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "hypothesis>=6.100",
    "pingouin>=0.5",
    "statsmodels>=0.14",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.7",
    "pandas-stubs>=3.0.3.260530",
]
